CHANGES IN VERSION 2.99.6
-------------------------

USER VISIBLE CHANGES:
- Export phenoDataFromPaths function (issue $195).

BUG FIXES:
- issue #196: removed the unnecessary requirement for same-dimension profile
  matrices in adjustRtime,XCMSnExp,ObiwarpParam.


CHANGES IN VERSION 2.99.5
-------------------------

USER VISIBLE CHANGES:
- Re-enable sleep parameter in findPeaks.centWave and findPeaks.matchedFilter.


CHANGES IN VERSION 2.99.4
-------------------------

NEW FEATURES:
- Add plotChromPeaks function to plot the definition (rt and mz range) of
  detected chromatographic peaks of one file into the mz-rt plane. 
- Add plotChromPeakImage function to plot the number of detected peaks along
  the retention time axis per file as an image plot.

USER VISIBLE CHANGES:
- Move Chromatogram class and functionality to the MSnbase package
- Add argument msLevel to the findChromPeaks method to allow (chromatographic)
  peak detection also on MS level > 1.

BUG FIXES:
- Polarity information was not read from mzXML files (issue #192).


CHANGES IN VERSION 2.99.3
-------------------------

BUG FIXES:
- issue #188: determine file type from file content if file ending not known.


CHANGES IN VERSION 2.99.2
-------------------------

BUG FIXES:
- issue #181: problem when isCentroided,Spectrum method returns NA because of
  too few peaks in a spectrum. Fixed by checking in such cases all spectra in
  the file.
- issue #184: add parameter sleep to do_groupChromPeaks_density function to be
  backwards compatible with the old group.density code.


CHANGES IN VERSION 2.99.1
-------------------------

NEW FEATURES:
- extractMsData to extract raw MS data as a data.frame (issue #120).

BUG FIXES:
- issue #175: an error is now thrown if no peak group was identified for peak
  group retention time correction.
- issue #178: scanrange was collapsed when the adjusted range was reported
  (pull request by Jan Stanstrup).